TODO
* CCM add separate function for authentication data support
* Look into slow processing when using wincrypt
* CCM add encryption support
* complete CFB suport
* add OFB suport ?
* add tests
  - CCM
  - CFB
  - OFB ?
  - XTS (add more test vectors?)
  - make sure to test non-16 byte aligned data for the different implementations
* add restriction that context should be used in the mode the keys were set ?
* msvscpp
  - add project files for test programs

Windows:
- WinXP no AES support ?
- WINAPI initialize provider only once - where to stick the init functions ?
- wincrypt and EVP - make sure to pass block sized blocks ?

20130716
* worked on tests

20130715
* worked on tests

20130714
* worked on moving XTS support from libfvde
* worked on tests

20130404
* textual changes
* updated dependencies

20130331
* Initial stand-alone version based on earlier work
