@@ -7,8 +7,8 @@ License: LGPL
 Source: %{name}-%{version}.tar.gz
 URL: https://code.google.com/p/libcaes/
 BuildRoot: %{_tmppath}/%{name}-%{version}-%{release}-root-%(%{__id_u} -n)
-@libcaes_spec_requires@ @ax_libcerror_spec_requires@ @ax_libcstring_spec_requires@
-@libcaes_spec_build_requires@ @ax_libcerror_spec_build_requires@ @ax_libcstring_spec_build_requires@
+@libcaes_spec_requires@ @ax_libcerror_spec_requires@ @ax_libcrypto_spec_requires@ @ax_libcstring_spec_requires@
+@libcaes_spec_build_requires@ @ax_libcerror_spec_build_requires@ @ax_libcrypto_spec_build_requires@ @ax_libcstring_spec_build_requires@
 
 %description
 libcaes is a library to support cross-platform AES encryption
